lib/parser.cpp
#include <iostream>
#include <memory>

#include <fmt/core.h>

#include <ast.hpp>
#include <file_reader.hpp>
#include <parser.hpp>

namespace gaya
{

using namespace std::string_literals;

parser::parser()
    : _lexer { nullptr }
{

    begin_scope();

    /* Define builtins */

    define("typeof"s);
    define("assert"s);
    define("tostring"s);
    define("tosequence"s);
    define("issequence"s);

    define("io.println"s);
    define("io.print"s);
    define("io.readline"s);
    define("io.readfile"s);
    define("io.listdir"s);

    define("string.length"s);
    define("string.concat"s);
    define("string.tonumber"s);
    define("string.index"s);
    define("string.substring"s);
    define("string.startswith"s);
    define("string.endswith"s);
    define("string.trim"s);

    define("array.length"s);
    define("array.concat"s);
    define("array.push"s);
    define("array.pop"s);
    define("array.sort"s);
    define("array.set"s);

    define("dict.length"s);
    define("dict.set"s);
    define("dict.remove"s);
    define("dict.contains"s);

    define("seq.next"s);
    define("seq.make"s);
    define("seq.copy"s);

    define("math.ceil"s);
    define("math.floor"s);
}

std::vector<diagnostic::diagnostic>& parser::diagnostics() noexcept
{
    return _diagnostics;
}

void parser::report_diagnostics() const noexcept
{
    for (const auto& diagnostic : _diagnostics)
    {
        fmt::println("{}", diagnostic.to_string());
    }
}

bool parser::had_error() const noexcept
{
    return !_diagnostics.empty();
}

void parser::clear_diagnostics() noexcept
{
    _diagnostics.clear();
}

ast::node_ptr parser::parse_expression(
    const std::string& filename,
    const char* source) noexcept
{
    _filename = filename;
    _lexer    = lexer { source };

    auto t = _lexer.next_token();
    if (!t) return nullptr;

    return expression(*t);
}

ast::node_ptr parser::parse_statement(
    const std::string& filename,
    const char* source) noexcept
{
    _filename = filename;
    _lexer    = lexer { source };
    return toplevel_stmt();
}

void parser::parser_error(span s, const std::string& message)
{
    _diagnostics
        .emplace_back(s, message, diagnostic::severity::error, _filename);
}

void parser::parser_hint(span s, const std::string& message)
{
    _diagnostics
        .emplace_back(s, message, diagnostic::severity::hint, _filename);
}

bool parser::match(std::optional<token> t, token_type tt) noexcept
{
    return t && t->type == tt;
}

bool parser::match(token_type tt) noexcept
{
    auto t = _lexer.peek_token();
    if (!t) return false;

    if (t->type == tt)
    {
        (void)_lexer.next_token();
        return true;
    }

    return false;
}

void parser::begin_scope() noexcept
{
    _scopes.push_back({});
}

void parser::end_scope() noexcept
{
    assert(_scopes.size() > 0);
    _scopes.pop_back();
}

void parser::define(eval::key key) noexcept
{
    assert(_scopes.size() > 0);
    _scopes.back().insert(key);
}

void parser::define(ast::identifier& ident) noexcept
{
    define(ident.key);
}

bool parser::assign_scope(std::shared_ptr<ast::identifier>& ident) noexcept
{
    assert(_scopes.size() > 0);

    for (int i = _scopes.size() - 1; i >= 0; i--)
    {
        if (_scopes[i].contains(ident->key))
        {
            ident->depth = _scopes.size() - 1 - i;
            return true;
        }
    }
    return false;
}

bool parser::assign_scope(std::unique_ptr<ast::identifier>& ident) noexcept
{
    assert(_scopes.size() > 0);

    for (int i = _scopes.size() - 1; i >= 0; i--)
    {
        if (_scopes[i].contains(ident->key))
        {
            ident->depth = _scopes.size() - 1 - i;
            return true;
        }
    }
    return false;
}

bool parser::is_valid_assignment_target(
    std::unique_ptr<ast::identifier>& ident) noexcept
{
    assert(_scopes.size() > 0);

    for (int i = _scopes.size() - 1; i >= 0; i--)
    {
        if (auto it = _scopes[i].find(ident->key); it != _scopes[i].end())
        {
            return it->kind == eval::identifier_kind::local;
        }
    }
    return false;
}

ast::node_ptr
parser::parse(const std::string& filename, const char* source) noexcept
{
    /* Create a new lexer for the given source code. */
    _filename = filename;
    _lexer    = lexer { source };

    auto program   = ast::make_node<ast::program>();
    program->stmts = stmts();

    /* Merge any lexer diagnostics. */
    for (const auto& diag : _lexer.diagnostics())
    {
        _diagnostics.insert(_diagnostics.begin(), diag);
    }

    return program;
}

std::vector<ast::stmt_ptr> parser::stmts() noexcept
{
    std::vector<ast::stmt_ptr> _stmts;

    for (;;)
    {
        if (auto stmt = toplevel_stmt(); stmt)
        {
            _stmts.push_back(std::move(stmt));
        }
        else
        {
            break;
        }
    }

    return _stmts;
}

ast::stmt_ptr parser::toplevel_stmt() noexcept
{
    auto token = _lexer.next_token();
    if (!token) return nullptr;

    switch (token->type)
    {
    case token_type::identifier:
    {
        if (auto colon_colon = _lexer.peek_token();
            match(colon_colon, token_type::colon_colon))
        {
            return declaration_stmt(token.value());
        }
        else
        {
            return expression_stmt(token.value());
        }
    }
    case token_type::include:
    {
        return include_stmt(token.value());
    }
    case token_type::type:
    {
        return type_declaration(*token);
    }
    case token_type::foreign:
    {
        return foreign_declaration(*token);
    }
    default:
    {
        return expression_stmt(token.value());
    }
    }
}

ast::stmt_ptr parser::local_stmt(token token) noexcept
{
    switch (token.type)
    {
    case token_type::identifier:
    {
        if (auto backarrow = _lexer.peek_token();
            match(backarrow, token_type::back_arrow))
        {
            return assignment_stmt(token);
        }
        else
        {
            return expression_stmt(token);
        }
    }
    case token_type::while_:
    {
        return while_stmt(token);
    }
    case token_type::for_:
    {
        return for_in_stmt(token);
    }
    default:
    {
        return expression_stmt(token);
    }
    }
}

ast::stmt_ptr parser::assignment_stmt(token identifier) noexcept
{
    assert(identifier.type == token_type::identifier);
    if (!match(token_type::back_arrow))
    {
        parser_error(
            identifier.span,
            "Expected '<-' after identifier in assignment statement");
        return nullptr;
    }

    auto expression_token = _lexer.next_token();
    if (!expression_token)
    {
        parser_error(
            identifier.span,
            "Expected expression after '<-' in assignment statement");
        return nullptr;
    }

    auto expr = expression(expression_token.value());
    if (!expr)
    {
        parser_error(
            identifier.span,
            "Expected an expression after '<-' in assignment statement");
        return nullptr;
    }

    auto ident = std::make_unique<ast::identifier>(
        identifier.span,
        identifier.span.to_string());

    if (!is_valid_assignment_target(ident))
    {
        parser_error(
            identifier.span,
            fmt::format(
                "Invalid assignment target: {}",
                identifier.span.to_string()));
        parser_hint(
            identifier.span,
            "Only variables introduced with let are valid assignment targets");
        return nullptr;
    }

    if (!assign_scope(ident))
    {
        parser_error(
            identifier.span,
            fmt::format(
                "Undeclared identifier in assignment: {}",
                identifier.span.to_string()));
        return nullptr;
    }

    return ast::make_node<ast::assignment_stmt>(std::move(ident), expr);
}

ast::stmt_ptr parser::while_stmt(token while_) noexcept
{
    assert(while_.type == token_type::while_);

    begin_scope();

    std::optional<ast::while_stmt::initializer> initializer;

    if (match(token_type::let))
    {
        /* Initializer
         *
         * NOTE: Using let for while initializers means we can't use it in the
         * condition without complicating parsing. If it turns out to be a
         * common case to want to use let in while condition, I'll implement
         * support for it.
         */
        auto i_t = _lexer.next_token();
        if (!match(i_t, token_type::identifier))
        {
            parser_error(
                while_.span,
                "Expected an identifier in while statement initializer");
            end_scope();
            return nullptr;
        }

        if (!match(token_type::equal))
        {
            parser_error(
                while_.span,
                "Expected a '=' after identifier in while statement "
                "initializer");
            end_scope();
            return nullptr;
        }

        define(eval::key::local(i_t->span.to_string()));
        auto e_t = _lexer.next_token();
        auto e   = e_t ? expression(*e_t) : nullptr;
        if (!e)
        {
            parser_error(
                while_.span,
                "Expected an expression after '=' in while statement "
                "initializer");
            end_scope();
            return nullptr;
        }

        initializer = ast::while_stmt::initializer {
            i_t->span.to_string(),
            e,
        };

        if (!match(token_type::colon))
        {
            parser_error(
                while_.span,
                "Expected a ':' after initializer in while statement");
            end_scope();
            return nullptr;
        }
    }

    auto span            = while_.span;
    auto condition_token = _lexer.next_token();
    if (!condition_token)
    {
        parser_error(span, "Expected a condition after 'while'");
        end_scope();
        return nullptr;
    }

    auto condition = expression(condition_token.value());
    if (!condition)
    {
        parser_error(span, "Expected a condition after 'while'");
        end_scope();
        return nullptr;
    }

    ast::stmt_ptr continuation = nullptr;

    if (match(token_type::colon))
    {
        if (auto identifier_token = _lexer.next_token();
            match(identifier_token, token_type::identifier))
        {
            continuation = assignment_stmt(identifier_token.value());
        }
        else
        {
            parser_error(
                while_.span,
                "Expected a an assignment statement after ':' in while");
            end_scope();
            return nullptr;
        }
    }

    std::vector<ast::stmt_ptr> body;

    for (;;)
    {
        auto stmt_token = _lexer.next_token();
        if (!stmt_token) break;

        if (match(stmt_token, token_type::end))
        {
            _lexer.push_back(stmt_token.value());
            break;
        }

        auto stmt = local_stmt(stmt_token.value());
        if (!stmt)
        {
            parser_error(
                while_.span,
                "Expected a local statement in while body");
            end_scope();
            return nullptr;
        }

        body.push_back(std::move(stmt));
    }

    end_scope();

    if (auto end_token = _lexer.next_token();
        !match(end_token, token_type::end))
    {
        parser_error(
            span,
            fmt::format(
                "Expected 'end' after while body, but got '{}'",
                end_token ? end_token->span.to_string() : "nothing"));
        parser_hint(span, "You can only use local statements in while body");
        return nullptr;
    }

    return ast::make_node<ast::while_stmt>(
        span,
        condition,
        std::move(body),
        continuation,
        initializer);
}

ast::stmt_ptr parser::for_in_stmt(token for_) noexcept
{
    assert(for_.type == token_type::for_);

    begin_scope();

    auto ident = _lexer.next_token();
    if (!match(ident, token_type::identifier))
    {
        parser_error(for_.span, "Expected an identifier after 'for'");
        end_scope();
        return nullptr;
    }

    auto identifier
        = ast::make_node<ast::identifier>(ident->span, ident->span.to_string());
    define(identifier->key);

    if (!match(token_type::in))
    {
        parser_error(for_.span, "Expected 'in' after identifier in for-loop");
        end_scope();
        return nullptr;
    }

    auto e_t = _lexer.next_token();
    if (!e_t)
    {
        parser_error(
            for_.span,
            "Expected an expression after 'in' in for-loop");
        end_scope();
        return nullptr;
    }

    auto e = expression(*e_t);
    if (!e)
    {
        end_scope();
        return nullptr;
    }

    std::vector<ast::stmt_ptr> body;

    for (;;)
    {
        auto s_t = _lexer.next_token();
        if (!s_t) break;

        if (match(s_t, token_type::end))
        {
            _lexer.push_back(s_t.value());
            break;
        }

        auto stmt = local_stmt(s_t.value());
        if (!stmt)
        {
            parser_error(for_.span, "Expected a local statement in for body");
            end_scope();
            return nullptr;
        }

        body.push_back(std::move(stmt));
    }

    end_scope();

    if (!match(token_type::end))
    {
        parser_error(for_.span, "Expected 'end' after for-loop");
        return nullptr;
    }

    return ast::make_node<ast::for_in_stmt>(
        for_.span,
        std::move(identifier),
        std::move(e),
        std::move(body));
}

ast::stmt_ptr parser::declaration_stmt(token identifier)
{
    auto colon_colon = _lexer.next_token();
    if (!colon_colon || colon_colon->type != token_type::colon_colon)
    {
        parser_error(identifier.span, "Expected a '::' after identifier");
        return nullptr;
    }

    auto ident = std::make_unique<ast::identifier>(
        identifier.span,
        identifier.span.to_string());

    /*
     * Here we are defining the identifier before evaluating its expression,
     * which means that we do support top level recursive declarations.
     *
     * NOTE: We still need to add support for this in the evaluator.
     * NOTE: I might not have updated this comment since adding support to the
     *       evaluator.
     */
    define(*ident);

    auto token = _lexer.next_token();
    if (!token)
    {
        parser_error(colon_colon->span, "Expected an expression after '::'");
        return nullptr;
    }

    auto expr = expression(token.value());
    if (!expr) return nullptr;

    return ast::make_node<ast::declaration_stmt>(std::move(ident), expr);
}

ast::stmt_ptr parser::expression_stmt(token token)
{
    auto expr = expression(token);
    if (!expr) return nullptr;

    if (!match(token_type::dot))
    {
        parser_error(
            token.span,
            "Expected '.' after expression in expression statement");
        parser_hint(token.span, "To print a value, use io.println(value)");
        return nullptr;
    }

    return ast::make_node<ast::expression_stmt>(expr);
}

ast::stmt_ptr parser::include_stmt(token include) noexcept
{
    auto t = _lexer.next_token();
    if (!match(t, token_type::string))
    {
        parser_error(include.span, "Expected a string after include");
        return nullptr;
    }

    std::filesystem::path file_path = t->span.to_string();
    auto span                       = include.span;

    if (file_path.has_extension() && file_path.extension() != ".gaya")
    {
        parser_error(span, "Can only include gaya files");
        return nullptr;
    }
    else
    {
        file_path = file_path.replace_extension("gaya");
    }

    if (!std::filesystem::exists(file_path))
    {
        /* If the file is not found, try relative to the script file. */
        auto script_file = std::filesystem::absolute(_filename);
        file_path        = script_file.replace_filename(file_path);
    }

    if (!std::filesystem::exists(file_path))
    {
        file_path = GAYA_RUNTIME / file_path.filename();
    }

    file_reader reader { file_path };
    if (!reader)
    {
        parser_error(
            span,
            fmt::format(
                "Failed to read the contents of {}",
                file_path.string()));
        return nullptr;
    }

    if (_included_files.contains(file_path))
    {
        /* If we've already processed that file, just ignore it. */
        return ast::make_node<ast::expression_stmt>(
            ast::make_node<ast::unit>(span));
    }

    auto* source = reader.slurp();
    assert(source);

    auto lexer    = _lexer;
    auto filename = _filename;

    auto ast = parse(file_path, source);
    if (!ast)
    {
        parser_error(
            span,
            fmt::format(
                "There were errors while parsing {}",
                file_path.string()));
        return nullptr;
    }

    _lexer    = lexer;
    _filename = filename;

    return ast::make_node<ast::include_stmt>(
        include.span,
        t->span.to_string(),
        ast);
}

ast::stmt_ptr parser::type_declaration(token type) noexcept
{
    assert(type.type == token_type::type);

    auto d_t = _lexer.next_token();
    if (!match(d_t, token_type::identifier))
    {
        parser_error(type.span, "Expected a type identifier after 'type'");
        return nullptr;
    }

    if (!match(token_type::of))
    {
        parser_error(type.span, "Expected 'of' after type identifier");
        return nullptr;
    }

    auto u_t_token = _lexer.next_token();
    auto u_t = u_t_token ? types::Type::from_string(u_t_token->span.to_string())
                         : std::nullopt;
    if (!u_t)
    {
        parser_error(type.span, "Expected a type after 'of'");
        return nullptr;
    }

    ast::expression_ptr c = nullptr;
    if (match(token_type::with))
    {
        begin_scope();
        auto e_t = _lexer.next_token();
        auto e   = e_t ? expression(*e_t) : nullptr;
        end_scope();

        if (!e)
        {
            parser_error(type.span, "Expected an expression after 'with'");
            return nullptr;
        }

        c = e;
    }

    auto declared_type    = d_t->span.to_string();
    auto type_declaration = ast::make_node<ast::TypeDeclaration>(
        type.span,
        declared_type,
        *u_t,
        c);

    /* We use this when resolving types in function parameters. */
    _type_declarations.insert({ declared_type, type_declaration });

    return type_declaration;
}

ast::stmt_ptr parser::foreign_declaration(token foreign) noexcept
{
    assert(foreign.type == token_type::foreign);

    auto libname = _lexer.next_token();
    if (!match(libname, token_type::string))
    {
        parser_error(foreign.span, "Expected a libary name after 'foreign'");
        return nullptr;
    }

    auto funcname = _lexer.next_token();
    if (!match(funcname, token_type::string))
    {
        parser_error(
            foreign.span,
            "Expected a function name after the library name");
        return nullptr;
    }

    auto return_type = _lexer.next_token();
    if (!match(return_type, token_type::identifier))
    {
        parser_error(
            foreign.span,
            "Expected a return type after the function name");
        return nullptr;
    }

    auto return_type_name = return_type->span.to_string();
    auto return_type_type = types::foreign_type_from_string(return_type_name);
    if (!return_type_type)
    {
        parser_error(foreign.span, "Invalid return type");
        return nullptr;
    }

    if (!match(token_type::lparen))
    {
        parser_error(foreign.span, "Expected a '(' after return type");
        return nullptr;
    }

    std::vector<types::ForeignType> argument_types;

    for (;;)
    {
        auto i_t = _lexer.next_token();
        if (!i_t) break;
        if (match(i_t, token_type::rparen))
        {
            _lexer.push_back(*i_t);
            break;
        }

        if (!match(i_t, token_type::identifier))
        {
            parser_error(foreign.span, "Expected an argument type");
            return nullptr;
        }

        auto argument_type_name = i_t->span.to_string();
        auto argument_type_type
            = types::foreign_type_from_string(argument_type_name);
        if (!argument_type_type)
        {
            parser_error(i_t->span, "Invalid argument type");
            return nullptr;
        }

        argument_types.push_back(*argument_type_type);

        if (!match(token_type::comma))
        {
            break;
        }
    }

    if (!match(token_type::rparen))
    {
        parser_error(foreign.span, "Expected a ')' after parameter types");
        return nullptr;
    }

    define(funcname->span.to_string());

    return ast::make_node<ast::ForeignDeclaration>(
        libname->span.to_string(),
        funcname->span.to_string(),
        *return_type_type,
        argument_types);
}

ast::expression_ptr parser::expression(token token)
{
    /*
     * NOTE:
     *
     * We might want to move these to primary expression or allow them in
     * grouping expressions.
     */
    switch (token.type)
    {
    case token_type::do_: return do_expression(token);
    case token_type::cases: return case_expression(token);
    default: return logical_expression(token);
    }
}

ast::expression_ptr parser::function_expression(token lcurly)
{
    assert(lcurly.type == token_type::lcurly);

    begin_scope();

    std::vector<ast::function_param> params;

    bool parsed_default_argument = false;

    for (;;)
    {
        auto p_t = _lexer.next_token();
        if (!p_t || match(p_t, token_type::arrow))
        {
            if (p_t) _lexer.push_back(*p_t);
            break;
        }

        auto p = match_pattern(*p_t, true, &eval::key::param);
        if (!p)
        {
            parser_error(
                p_t->span,
                "Expected a pattern in function parameter list");
            end_scope();
            return nullptr;
        }

        types::Type t           = types::Type { types::TypeKind::Any };
        ast::expression_ptr d_a = nullptr;

        if (match(token_type::colon))
        {
            auto t_t = _lexer.next_token();
            if (!match(t_t, token_type::identifier))
            {
                parser_error(
                    lcurly.span,
                    "Expected a type name after ':' in function parameter");
                end_scope();
                return nullptr;
            }

            auto t_d_s = t_t->span.to_string();
            auto m_t   = types::Type::from_string(t_d_s);
            if (!m_t)
            {
                if (auto it = _type_declarations.find(t_d_s);
                    it != _type_declarations.end())
                {
                    auto type_declaration = it->second;
                    auto constraint       = types::TypeConstraint {
                        nullptr,
                        type_declaration->constraint,
                    };
                    m_t = types::Type {
                        type_declaration->declared_type,
                        type_declaration->underlying_type.kind(),
                        constraint,
                    };
                }
                else
                {
                    parser_error(lcurly.span, "Invalid type identifier");
                    end_scope();
                    return nullptr;
                }
            }

            t = *m_t;
        }

        if (match(token_type::equal))
        {
            auto d_t = _lexer.next_token();
            auto d   = d_t ? expression(*d_t) : nullptr;

            if (!d)
            {
                parser_error(
                    lcurly.span,
                    "Expected an expression after '=' in default argument");
                end_scope();
                return nullptr;
            }

            d_a                     = d;
            parsed_default_argument = true;
        }
        else if (parsed_default_argument)
        {
            parser_error(
                lcurly.span,
                "Positional parameters cannot follow default arguments");
            end_scope();
            return nullptr;
        }

        ast::function_param param = { std::move(*p), t, d_a };
        params.push_back(std::move(param));

        if (!match(token_type::comma))
        {
            break;
        }
    }

    if (!match(token_type::arrow))
    {
        parser_error(lcurly.span, "Expected '=>' after function parameters");
        end_scope();
        return nullptr;
    }

    if (auto r_t = _lexer.next_token(); match(r_t, token_type::rcurly))
    {
        end_scope();
        return ast::make_node<ast::function_expression>(
            lcurly.span,
            std::move(params),
            ast::make_node<ast::unit>(r_t->span));
    }
    else if (r_t)
    {
        auto e = expression(*r_t);
        if (!e)
        {
            parser_error(
                lcurly.span,
                "Expected an expression after '=>' in function literal");
            end_scope();
            return nullptr;
        }

        if (!match(token_type::rcurly))
        {
            parser_error(lcurly.span, "Expected a '}' after function body");
            end_scope();
            return nullptr;
        }

        end_scope();
        return ast::make_node<ast::function_expression>(
            lcurly.span,
            std::move(params),
            std::move(e));
    }
    else
    {
        parser_error(lcurly.span, "Expected a '}' after function body");
        end_scope();
        return nullptr;
    }
}

ast::expression_ptr parser::logical_expression(token token) noexcept
{
    auto lhs = comparison_expression(token);
    if (!lhs) return nullptr;

    auto done = false;
    while (!done)
    {
        auto t = _lexer.next_token();
        if (!t) break;

        switch (t->type)
        {
        case token_type::or_:
        case token_type::and_:
        {
            auto op = t.value();

            t = _lexer.next_token();
            if (!t)
            {
                parser_error(
                    op.span,
                    fmt::format(
                        "Expected an expression after {}",
                        op.span.to_string()));
                return nullptr;
            }

            auto rhs = comparison_expression(t.value());
            if (!rhs) return nullptr;

            lhs = ast::make_node<ast::binary_expression>(lhs, op, rhs);

            break;
        }
        default:
        {
            _lexer.push_back(t.value());
            done = true;
            break;
        }
        }
    }

    return lhs;
}

ast::expression_ptr parser::comparison_expression(token token) noexcept
{
    auto lhs = pipe_expression(token);
    if (!lhs) return nullptr;

    auto is_comparison_op = [](auto t) {
        switch (t.type)
        {
        case token_type::less_than:
        case token_type::less_than_eq:
        case token_type::greater_than:
        case token_type::greater_than_eq:
        case token_type::equal_equal:
        case token_type::not_equals: return true;
        default: return false;
        }
    };

    for (;;)
    {
        auto op = _lexer.next_token();
        if (!op) break;

        if (!is_comparison_op(op.value()))
        {
            _lexer.push_back(op.value());
            break;
        }

        auto expr_token = _lexer.next_token();
        if (!expr_token)
        {
            parser_error(
                token.span,
                fmt::format(
                    "Expected an expression after {}",
                    token.span.to_string()));
            return nullptr;
        }

        auto rhs = pipe_expression(expr_token.value());

        if (!rhs) return nullptr;

        lhs = ast::make_node<ast::binary_expression>(lhs, op.value(), rhs);
    }

    return lhs;
}

ast::expression_ptr parser::pipe_expression(token token) noexcept
{
    auto lhs = bitwise_expression(token);
    if (!lhs) return nullptr;

    for (;;)
    {
        auto pipe_token = _lexer.next_token();
        if (!match(pipe_token, token_type::pipe))
        {
            if (pipe_token)
            {
                _lexer.push_back(pipe_token.value());
            }
            break;
        }

        auto expr_token = _lexer.next_token();
        if (!expr_token)
        {
            parser_error(
                token.span,
                "Expected an expression after pipe operator");
            return nullptr;
        }

        begin_scope();
        auto rhs = bitwise_expression(expr_token.value());
        end_scope();

        if (!rhs) return nullptr;

        assert(lhs && rhs);

        lhs = ast::make_node<ast::binary_expression>(
            lhs,
            pipe_token.value(),
            rhs);
    }

    return lhs;
}

ast::expression_ptr parser::bitwise_expression(token token) noexcept
{
    auto lhs = term_expression(token);
    if (!lhs) return nullptr;

    auto done = false;
    while (!done)
    {
        auto t = _lexer.next_token();
        if (!t) break;

        switch (t->type)
        {
        case token_type::land:
        case token_type::lor:
        case token_type::xor_:
        case token_type::lshift:
        case token_type::rshift:
        {
            auto op = t.value();

            t = _lexer.next_token();
            if (!t)
            {
                parser_error(
                    op.span,
                    fmt::format(
                        "Expected an expression after {}",
                        op.span.to_string()));
                return nullptr;
            }

            auto rhs = term_expression(t.value());
            if (!rhs) return nullptr;

            lhs = ast::make_node<ast::binary_expression>(lhs, op, rhs);

            break;
        }
        default:
        {
            _lexer.push_back(t.value());
            done = true;
            break;
        }
        }
    }

    return lhs;
}

ast::expression_ptr parser::term_expression(token token) noexcept
{
    auto lhs = factor_expression(token);
    if (!lhs) return nullptr;

    auto done = false;
    while (!done)
    {
        auto t = _lexer.next_token();
        if (!t) break;

        switch (t->type)
        {
        case token_type::plus:
        case token_type::dash:
        case token_type::diamond:
        {
            auto op = t.value();

            t = _lexer.next_token();
            if (!t)
            {
                parser_error(
                    op.span,
                    fmt::format(
                        "Expected an expression after {}",
                        op.span.to_string()));
                return nullptr;
            }

            auto rhs = factor_expression(t.value());
            if (!rhs) return nullptr;

            lhs = ast::make_node<ast::binary_expression>(lhs, op, rhs);

            break;
        }
        default:
        {
            _lexer.push_back(t.value());
            done = true;
            break;
        }
        }
    }

    return lhs;
}

ast::expression_ptr parser::factor_expression(token token) noexcept
{
    auto lhs = unary_expression(token);
    if (!lhs) return nullptr;

    auto done = false;
    while (!done)
    {
        auto t = _lexer.next_token();
        if (!t) break;

        switch (t->type)
        {
        case token_type::star:
        case token_type::slash:
        {
            auto op = t.value();

            t = _lexer.next_token();
            if (!t)
            {
                parser_error(
                    op.span,
                    fmt::format(
                        "Expected an expression after {}",
                        op.span.to_string()));
                return nullptr;
            }

            auto rhs = unary_expression(t.value());
            if (!rhs) return nullptr;

            lhs = ast::make_node<ast::binary_expression>(lhs, op, rhs);

            break;
        }
        default:
        {
            _lexer.push_back(t.value());
            done = true;
            break;
        }
        }
    }

    return lhs;
}

ast::expression_ptr parser::unary_expression(token op) noexcept
{
    switch (op.type)
    {
    case token_type::perform: return perform_expression(op);
    case token_type::not_: return not_expression(op);
    case token_type::lnot: return lnot_expression(op);
    default: return call_expression(op);
    }
}

ast::expression_ptr parser::lnot_expression(token op) noexcept
{
    assert(op.type == token_type::lnot);
    auto token = _lexer.next_token();
    if (!token)
    {
        parser_error(
            op.span,
            fmt::format(
                "Expected an expression after '~'",
                op.span.to_string()));
        return nullptr;
    }

    auto expr = call_expression(token.value());
    if (!expr) return nullptr;

    return ast::make_node<ast::lnot_expression>(op, expr);
}

ast::expression_ptr parser::not_expression(token op) noexcept
{
    assert(op.type == token_type::not_);
    auto token = _lexer.next_token();
    if (!token)
    {
        parser_error(
            op.span,
            fmt::format(
                "Expected an expression after 'not'",
                op.span.to_string()));
        return nullptr;
    }

    auto expr = call_expression(token.value());
    if (!expr) return nullptr;

    return ast::make_node<ast::not_expression>(op, expr);
}

ast::expression_ptr parser::perform_expression(token op) noexcept
{
    assert(op.type == token_type::perform);
    auto token = _lexer.next_token();
    if (!token)
    {
        parser_error(op.span, "Expected a statement after 'perform'");
        return nullptr;
    }

    auto stmt = local_stmt(token.value());
    if (!stmt) return nullptr;

    return ast::make_node<ast::perform_expression>(op, stmt);
}

ast::expression_ptr parser::call_expression(token starttoken)
{
    auto expr = primary_expression(starttoken);
    if (!expr) return nullptr;

    for (;;)
    {
        auto lparen = _lexer.next_token();
        if (!lparen) break;

        auto has_argument_list = true;
        std::vector<ast::expression_ptr> args;

        if (!match(lparen, token_type::lparen))
        {
            if (match(lparen, token_type::lcurly))
            {
                auto function = function_expression(lparen.value());
                if (!function)
                {
                    parser_error(
                        starttoken.span,
                        "Expected a trailing function in call expression");
                    return nullptr;
                }
                args.push_back(function);
                has_argument_list = false;
            }
            else
            {
                _lexer.push_back(lparen.value());
                break;
            }
        }

        for (;;)
        {
            if (!has_argument_list) break;

            auto expr_token = _lexer.next_token();
            if (!expr_token) break;

            if (match(expr_token, token_type::rparen))
            {
                _lexer.push_back(expr_token.value());
                break;
            }

            auto arg = expression(expr_token.value());
            if (!arg) return nullptr;

            args.push_back(std::move(arg));

            if (!match(token_type::comma))
            {
                break;
            }
        }

        if (!match(token_type::rparen) && has_argument_list)
        {
            parser_error(starttoken.span, "Missing ')' after function call");
            return nullptr;
        }

        if (auto lcurly = _lexer.next_token();
            match(lcurly, token_type::lcurly) && has_argument_list)
        {
            auto function = function_expression(lcurly.value());
            if (!function) return nullptr;
            args.push_back(function);
        }
        else if (lcurly)
        {
            _lexer.push_back(lcurly.value());
        }

        expr = ast::make_node<ast::call_expression>(
            starttoken.span,
            expr,
            std::move(args));
    }

    return expr;
}

ast::expression_ptr parser::let_expression(token let)
{
    assert(let.type == token_type::let);

    begin_scope();

    auto let_binding = [&](token p_t) -> std::optional<ast::let_binding> {
        auto p = match_pattern(p_t, false);
        if (!p) return {};

        if (!match(token_type::equal))
        {
            parser_error(
                p_t.span,
                "Expected '=' after pattern in let expression");
            return std::nullopt;
        }

        auto e_t = _lexer.next_token();
        if (!e_t)
        {
            parser_error(
                p_t.span,
                "Expected an expression after '=' in let expression");
            return std::nullopt;
        }

        auto e = expression(e_t.value());
        if (!e) return std::nullopt;

        if (p->kind == ast::match_pattern::kind::capture)
        {
            auto e_    = std::get<ast::expression_ptr>(p->value);
            auto ident = std::static_pointer_cast<ast::identifier>(e_);
            define(ident->key);
        }

        return ast::let_binding { p_t.span, std::move(*p), std::move(e) };
    };

    std::vector<ast::let_binding> bindings;
    for (;;)
    {
        auto p_t = _lexer.next_token();
        if (!p_t) break;

        if (match(p_t, token_type::in))
        {
            _lexer.push_back(*p_t);
            break;
        }

        auto binding = let_binding(*p_t);
        if (!binding) return nullptr;

        bindings.push_back(std::move(*binding));

        if (!match(token_type::comma))
        {
            break;
        }
    }

    if (bindings.empty())
    {
        parser_error(
            let.span,
            "Expected at least one binding in let expression");
        end_scope();
        return nullptr;
    }

    if (!match(token_type::in))
    {
        parser_error(
            let.span,
            "Expected 'in' after bindings in let expression");
        end_scope();
        return nullptr;
    }

    auto e_t = _lexer.next_token();
    if (!e_t)
    {
        parser_error(let.span, "Expected an expression after 'in'");
        end_scope();
        return nullptr;
    }

    auto e = expression(*e_t);
    if (!e)
    {
        end_scope();
        return nullptr;
    }

    end_scope();

    return ast::make_node<ast::let_expression>(std::move(bindings), e);
}

ast::expression_ptr parser::case_expression(token cases)
{
    std::vector<ast::case_branch> branches;

    for (;;)
    {
        auto g_t = _lexer.next_token();
        if (!g_t) break;
